# Rag

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/services/: document_service.py  rag_pipeline.py  vectorstore.py
docs/stage_01/: README.md
docs/stage_02/: README.md
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-panel.tsx  sidebar.tsx  upload-dialog.tsx
frontend/components/ui/: button.tsx  input.tsx  scroll-area.tsx  separator.tsx  textarea.tsx
frontend/lib/: api.ts  types.ts  utils.ts
frontend/src/: App.tsx  styles.css
