[project]
name = "rag-backend"
version = "0.1.0"
description = "FastAPI backend for LangChain Milvus RAG platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic-settings>=2.1.0",
  "langchain==0.1.0",
  "langchain-core>=0.1.0",
  "langchain-community==0.0.10",
  "langchain-text-splitters>=0.0.1",
  "langchain-huggingface>=0.0.2",
  "pymilvus>=2.3.0",
  "loguru>=0.7.2",
  "pillow>=10.2.0",
  "python-multipart>=0.0.7",
  "sentence-transformers>=2.3.0",
  "unstructured>=0.12.2",
  "python-docx>=1.0.0",
  "python-pptx>=0.6.23",
  "openpyxl>=3.1.2",
  "pdfplumber>=0.10.4"
]

[tool.setuptools]
packages = ["app"]
